--- a/index.html
+++ b/index.html
@@ -48,29 +48,13 @@
                     <p>Me considero un apasionado, proactivo y autodidacta en las nuevas tecnologías y metodologías para el Desarrollo de Sistemas Informáticos. La informática es un hermoso hobbie que empezó hace mas de <script> var anio = new Date().getFullYear(); var exper = anio - 2009; document.write(exper);</script> años, incursionando en la programación y el desarrollo de software.</p>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
-                        <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                    <div class="col">
+                        <center><img src="assets/img/profile-img.jpg" alt=""></center>
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content">
-                        <p class="font-italic">
+                        <p class="font-italic" style="line-height: 30px;">
                             La informática es una rama del conocimiento que crece muy rápidamente. Hay que estar actualizado constantemente, ya que la última tendencia de hoy mañana es absoleta. La programación y el diseño es un hobbie sin fin. Amo esta profesión por que la realizo con pasión, seriedad y responsabilidad...
                         </p>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <ul>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Cumpleaños:</strong> 11 de Octubre</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Web:</strong> https://mbrignone93.github.io</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Celular:</strong> +54 3547453224</li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-6">
-                                <ul>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Edad:</strong> <script> var anio = new Date().getFullYear(); var exper = anio - 1993; document.write(exper);</script> años</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> maximilianobrignone@gmail.com</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Alta Gracia, Córdoba Argentina</li>
-                                </ul>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
